# mahjong-dp-backend

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/src/: analysis.rs  flat_file_vec_pool.rs  main.rs
common/: Cargo.toml
common/src/: flat_file_vec.rs  io.rs  lib.rs
common/src/mahjong/: hand.rs  mod.rs  types.rs
dp/: Cargo.toml
dp/src/: lib.rs  metrics.rs  tsumo.rs
