[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }
deadpool = "0.10"
async-trait = "0.1"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }