[package]
name = "common"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3           # or "3" for 最大速度（バイナリサイズ気にしないなら "3"）
lto = true              # Link Time Optimization
codegen-units = 1       # コード生成ユニット数を1にしてLTO効かせやすく
panic = "abort"         # panic時の処理を簡素化
strip = true            # バイナリから不要なデバッグ情報を除去（nightly限定）

[dependencies]

itertools = "0.11.0"
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"]}
rayon = "1.7.0"
glob = "0.3.1"
chrono = "0.4.26"
rand = "0.8.5"
anyhow = "1.0.98"